--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="cause-item" id="cause-elders">
                 <h3>Edifício para Idosos (Elder people building)</h3>
                 <div class="cause-details">
-                    <p>Ajude-nos a construir um novo espaço para os nossos idosos.</p>
+                    <p>Ajude-nos a renovar o espaço para os nossos idosos.</p>
                     <p>Objetivo: <span class="goal-amount">2.500.000</span>€</p>
                     <p>Angariado: <span class="raised-amount">0</span>€</p>
                     <div class="progress-bar-container">
@@ -57,7 +57,7 @@
             <div class="cause-item" id="cause-children">
                 <h3>Edifício para Crianças (Children building)</h3>
                 <div class="cause-details">
-                    <p>Queremos construir um novo edifício seguro e divertido para as crianças.</p>
+                    <p>Ajude-nos a renovar o espaço para as crianças.</p>
                     <p>Objetivo: <span class="goal-amount">1.500.000</span>€</p>
                     <p>Angariado: <span class="raised-amount">0</span>€</p>
                     <div class="progress-bar-container">
